--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=catsgram
+spring.application.name=catsgram;
+
+logging.level.com.example.catsgram.controller.PostController=debug;
